--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,10 +5,11 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "clerk-sdk-python>=0.1.0",
-    "fastapi>=0.116.1",
-    "openai>=1.107.1",
-    "python-dotenv>=1.1.1",
-    "sqlalchemy>=2.0.43",
-    "uvicorn>=0.35.0",
+    "clerk-backend-api>=2.2.0",
+    "fastapi>=0.115.12",
+    "openai>=1.79.0",
+    "python-dotenv>=1.1.0",
+    "sqlalchemy>=2.0.41",
+    "svix>=1.65.0",
+    "uvicorn>=0.34.2",
 ]
